using System.Collections;
using System.Collections.Generic;
using UnityEngine;


public class Player1 : MonoBehaviour
{
    public float PlayerSpeed; //ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã®ç§»å‹•é€Ÿåº¦ã‚’ç®¡ç†ã™ã‚‹å¤‰æ•°
    public float CrouchSpeed; //ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã®ã—ã‚ƒãŒã¿æ­©ãæ™‚ã®ç§»å‹•é€Ÿåº¦ã‚’ç®¡ç†ã™ã‚‹å¤‰æ•°
    public float RotationSpeed; //ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã®è¦–ç•Œé€Ÿåº¦ã‚’ç®¡ç†ã™ã‚‹å¤‰æ•°
    public Transform Camera; //MainCamera
    public Transform AimCamera; //æ§‹ãˆã‚«ãƒ¡ãƒ©ã®ä½ç½®
    public float camSmooth = 10f; //é€šå¸¸ã‚«ãƒ¡ãƒ©ã‹ã‚‰æ§‹ãˆã‚«ãƒ¡ãƒ©ã¾ã§ã®è£œå®Œé€Ÿåº¦
    Vector3 speed = Vector3.zero;
    Vector3 rot = Vector3.zero;
    public Animator PlayerAnimator;
    bool isRun; //èµ°ã‚ŠçŠ¶æ…‹ã‚’ç®¡ç†ã™ã‚‹å¤‰æ•°
    bool isCrouch; //ã—ã‚ƒãŒã¿çŠ¶æ…‹ã‚’ç®¡ç†ã™ã‚‹å¤‰æ•°
    bool isTakingItem; // æ­¦å™¨å–å¾—ä¸­ãƒ•ãƒ©ã‚°
    bool ishas_Weapon_pistol; //ãƒãƒ³ãƒ‰ã‚¬ãƒ³ã‚’æ‰€æŒä¸­ã‚’ç®¡ç†ã™ã‚‹å¤‰æ•°
    public bool isAiming; //éŠƒã‚’æ§‹ãˆã‚‹çŠ¶æ…‹ã‚’ç®¡ç†ã™ã‚‹å¤‰æ•°
    bool isPistol_crouch; //éŠƒã‚’ã—ã‚ƒãŒã¿çŠ¶æ…‹æ™‚ã«æ§‹ãˆã‚‹çŠ¶æ…‹ã‚’ç®¡ç†ã™ã‚‹å¤‰æ•°
    bool isPistol_crouch_Aiming; //ã—ã‚ƒãŒã¿æ­©ãæ™‚ã€éŠƒã‚’æ§‹ãˆã‚‹çŠ¶æ…‹ã‚’ç®¡ç†ã™ã‚‹å¤‰æ•°
    private GameObject weaponInRange;  // ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ãŒè§¦ã‚Œã¦ã„ã‚‹æ­¦å™¨
    private GameObject equippedWeapon; // è£…ç€æ¸ˆã¿ã®æ­¦å™¨

    private List<GameObject> weapons = new List<GameObject>(); //æ­¦å™¨ã‚’æ ¼ç´ã™ã‚‹ãƒªã‚¹ãƒˆ
    private int currentWeaponIndex = -1; //ç¾åœ¨ã®æ­¦å™¨ï¼ˆ-1ã¯æœªè£…å‚™ï¼‰
    [SerializeField] private float mouseSensitivity = 1000f; 
    //[SerializeField] private float keyRotationSpeed = 100f;



    // Start is called before the first frame update
    void Start()
    {

    }

    // Update is called once per frame
    void Update()
    {

        Move();
        Rotation();
        Crouch();
        CrouchAim();
        GetWeapon();
        Pistol_crouch_Aiming();



        // â†“ã“ã“ã«å…¥ã‚Œã‚‹
        AnimatorStateInfo state = PlayerAnimator.GetCurrentAnimatorStateInfo(0);
        if (isTakingItem && state.IsName("TakingItem") && state.normalizedTime >= 1f)
        {
            isTakingItem = false;
            //ishas_Weapon_pistol = true;
            PlayerAnimator.SetBool("TakingItem", false);
            //PlayerAnimator.SetBool("has_Weapon_pistol", ishas_Weapon_pistol);
        }

        HandleAim();

        // --- ã‚«ãƒ¡ãƒ©è£œé–“ ---
        //éŠƒã‚’æ§‹ãˆã¦ã„ã‚‹é–“
        if (isAiming)
        {
            // è‚©è¶Šã—ã‚«ãƒ¡ãƒ©ã«æ»‘ã‚‰ã‹ã«ç§»å‹•
            //Vector3.Lerp(a, b, t) ã¯ a ã‹ã‚‰ b ã« t ã®å‰²åˆã§è£œé–“ã™ã‚‹
            Camera.position = Vector3.Lerp(Camera.position, AimCamera.position, camSmooth * Time.deltaTime);
            //å›è»¢ã‚‚åŒã˜ã‚ˆã†ã«ã€ç¾åœ¨ã®å›è»¢ã‹ã‚‰ AimCamera ã®å›è»¢ã¾ã§è£œé–“
            Camera.rotation = Quaternion.Lerp(Camera.rotation, AimCamera.rotation, camSmooth * Time.deltaTime);
        }
        else
        {
            // é€šå¸¸ã‚«ãƒ¡ãƒ©ã«æˆ»ã™
            Camera.position = Vector3.Lerp(Camera.position, transform.position, camSmooth * Time.deltaTime);
            Camera.rotation = Quaternion.Lerp(Camera.rotation, Quaternion.Euler(0, Camera.eulerAngles.y, 0), camSmooth * Time.deltaTime);
        }

        //æ­¦å™¨ã®åˆ‡ã‚Šæ›¿ãˆï¼ˆã‚­ãƒ¼ 1, 2, 3ï¼‰
        if (Input.GetKeyDown(KeyCode.Alpha1))
        {
            SwitchWeapon(0);
        }
        if (Input.GetKeyDown(KeyCode.Alpha2))
        {
            SwitchWeapon(1);
        }
        if (Input.GetKeyDown(KeyCode.Alpha3))
        {
            SwitchWeapon(2);
        }


    }

    void Move()
    {
        speed = Vector3.zero;
        rot = Vector3.zero;
        isRun = false;


        if (Input.GetKey(KeyCode.W))
        {
            rot.y = 0;
            MoveSet();
        }
        if (Input.GetKey(KeyCode.S))
        {
            rot.y = 180;
            MoveSet();
        }
        if (Input.GetKey(KeyCode.D))
        {
            rot.y = 90;
            MoveSet();

        }
        if (Input.GetKey(KeyCode.A))
        {
            rot.y = -90;
            MoveSet();
        }



        PlayerAnimator.SetBool("run", isRun && !isCrouch);
        PlayerAnimator.SetBool("crouchwalk", isCrouch && isRun); // ã—ã‚ƒãŒã¿æ­©ã
        PlayerAnimator.SetBool("TakingItem", isTakingItem);

        // æ–°è¦: æ§‹ãˆçŠ¶æ…‹ã§ã®èµ°ã‚Š
        if (ishas_Weapon_pistol && isAiming && isRun)
        {
            PlayerAnimator.SetBool("pistol_run", true);
        }
        else
        {
            PlayerAnimator.SetBool("pistol_run", false);
        }
    }

    void MoveSet()
    {

        isRun = true;

        float moveSpeed = isCrouch ? CrouchSpeed : PlayerSpeed;

        //isAimingãŒTrue(éŠƒã‚’æ§‹ãˆã¦ã„ã‚‹æ™‚)
        if (isAiming)
        {
            //ç§»å‹•æ–¹å‘ã‚’æ ¼ç´ã™ã‚‹ãŸã‚ã®å¤‰æ•°ã‚’åˆæœŸåŒ–ï¼Œæœ€åˆã¯(0, 0, 0)
            Vector3 moveDir = Vector3.zero;
            if (Input.GetKey(KeyCode.W))
            {
                //Wã‚­ãƒ¼ãŒæŠ¼ã•ã‚ŒãŸã‚‰ã‚«ãƒ¡ãƒ©ã®å‰æ–¹å‘ã‚’ç§»å‹•æ–¹å‘ã«åŠ ãˆã‚‹
                //ã¤ã¾ã‚Šãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ãŒã€Œã‚«ãƒ¡ãƒ©ãŒå‘ã„ã¦ã„ã‚‹æ–¹å‘ã«å‰é€²ã€
                moveDir += Camera.forward;
            }
            if (Input.GetKey(KeyCode.S))
            {
                moveDir -= Camera.forward;
            }
            if (Input.GetKey(KeyCode.D))
            {
                moveDir += Camera.right;
            }
            if (Input.GetKey(KeyCode.A))
            {
                moveDir -= Camera.right;
            }
            //å¹³é¢ä¸Šã ã‘ã®ç§»å‹•ã«åˆ¶é™
            moveDir.y = 0;
            //ç§»å‹•æ–¹å‘ãƒ™ã‚¯ãƒˆãƒ«ã‚’ã€Œé•·ã•ï¼‘ã€ã«ã™ã‚‹ã€‚
            moveDir.Normalize();
            //å®Ÿéš›ã«ã‚­ãƒ£ãƒ©ã‚’ç§»å‹•ã•ã›ã‚‹
            //moveDirï¼ˆæ–¹å‘ï¼‰* movespeedï¼ˆç§»å‹•é€Ÿåº¦) * Time.deltaTime(ãƒ•ãƒ¬ãƒ¼ãƒ )
            transform.position += moveDir * moveSpeed * Time.deltaTime;
            // å‘ãã¯ã‚«ãƒ¡ãƒ©ã«åˆã‚ã›ã¦å›ºå®š
            //Quaternion.Euler(0, Camera.eulerAngles.y, 0) = Yè»¸ã ã‘ã‚«ãƒ¡ãƒ©ã¨åŒã˜è§’åº¦ã«ã™ã‚‹
            transform.rotation = Quaternion.Euler(0, Camera.eulerAngles.y, 0);
        }
        else
        {
            // --- é€šå¸¸æ™‚ã¯ä»Šã¾ã§é€šã‚Šã‚­ãƒ£ãƒ©ã®å‘ãã‚‚å¤‰ãˆã‚‹ ---
            transform.Translate(0f, 0f, moveSpeed * Time.deltaTime);
            transform.eulerAngles = Camera.transform.eulerAngles + rot;
        }

    }

    void Rotation()
    {
        if (isAiming)
        {
            // ğŸ¯ ã‚¨ã‚¤ãƒ ä¸­ â†’ ãƒã‚¦ã‚¹æ“ä½œ
            float mouseX = Input.GetAxis("Mouse X") * mouseSensitivity * Time.deltaTime;
            float mouseY = Input.GetAxis("Mouse Y") * mouseSensitivity * Time.deltaTime;


            // æ¨ªå›è»¢ï¼ˆã‚­ãƒ£ãƒ©ã®Yè»¸å›è»¢ï¼‰
            transform.Rotate(Vector3.up * mouseX);

            // ç¸¦å›è»¢ï¼ˆã‚«ãƒ¡ãƒ©ã®ä¸Šä¸‹ã®ã¿ï¼‰
            Vector3 camEuler = Camera.eulerAngles;
            camEuler.x -= mouseY;
            // ä¸Šä¸‹ã®å›è»¢åˆ¶é™ï¼ˆä¾‹: -30Â°ã€œ60Â°ï¼‰
            camEuler.x = Mathf.Clamp((camEuler.x > 180) ? camEuler.x - 360 : camEuler.x, -90f, 90f);
            camEuler.x = (camEuler.x < 0) ? camEuler.x + 360 : camEuler.x; // Clampèª¿æ•´
            Camera.eulerAngles = new Vector3(camEuler.x, Camera.eulerAngles.y, 0f);
        }
        else
        {
            var speed = Vector3.zero;

            if (Input.GetKey(KeyCode.LeftArrow))
            {
                speed.y = -RotationSpeed;
            }
            if (Input.GetKey(KeyCode.RightArrow))
            {
                speed.y = RotationSpeed;
            }
            if (Input.GetKey(KeyCode.UpArrow))
            {
                speed.x = RotationSpeed;
            }
            if (Input.GetKey(KeyCode.DownArrow))
            {
                speed.x = -RotationSpeed;
            }


            Camera.transform.eulerAngles += speed; //è‡ªåˆ†ã®å›è»¢ã«speedã‚’åŠ ç®—
        }

    }


    // æ­¦å™¨ã‚’æ‰‹ã«è£…ç€ã™ã‚‹å‡¦ç†ã¯
    // ã€Œæ‹¾ã†ãƒ¢ãƒ¼ã‚·ãƒ§ãƒ³ â†’ ç«‹ã¡å§¿ã€ã¸ã®é·ç§»ç›´å¾Œã«å‘¼ã³å‡ºã—ãŸã„ã®ã§
    // StateMachineBehaviour ã‚’ä½¿ã†ã®ãŒãã‚Œã„

    void TryPickupWeapon()
    {
        //ã‚·ãƒ¼ãƒ³å†…ã«å­˜åœ¨ã™ã‚‹ WeaponPickUp ã‚³ãƒ³ãƒãƒ¼ãƒãƒ³ãƒˆã‚’å…¨éƒ¨æ¢ã—ã¦é…åˆ—ã«æ ¼ç´ã—ã¾ã™ã€‚
        WeaponPickUp[] weaponPickups = FindObjectsOfType<WeaponPickUp>();
        //foræ–‡ã§ä¸€ã¤ãšã¤ç¢ºèª
        foreach (var pickup in weaponPickups)
        {
            //ãƒ‡ãƒãƒƒã‚°ç”¨
            Debug.Log(pickup.name + " inRange: " + pickup.playerInRange);
            //ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ãŒæ­¦å™¨ã®å½“ãŸã‚Šåˆ¤å®šå†…ã«ã„ã‚‹ã‹ã¤ã¾ã æ­¦å™¨ã‚’æ‹¾ã£ã¦ã„ãªã„çŠ¶æ…‹
            if (pickup.playerInRange && !isTakingItem)
            {
                //Trueã«ã—ã¦ã‚¢ã‚¤ãƒ†ãƒ ã‚’æ‹¾ã†ãƒ¢ãƒ¼ã‚·ãƒ§ãƒ³ã‚’è¡Œã†
                isTakingItem = true;
                PlayerAnimator.SetBool("TakingItem", true);
                //ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã®æ‰‹ã®ä½ç½®ã«é…ç½®ã—ã¦ã„ã‚‹ã‚ªãƒ–ã‚¸ã‚§ã‚¯ãƒˆæŒ‡ï¼ˆWeaponSocket)ã‚’æ¢ã—ã¦ãã®Transformã‚’å–å¾—
                Transform socket = GameObject.Find("WeaponSocket").transform;
                GameObject weaponObj = pickup.gameObject;
                weaponObj.transform.SetParent(socket);
                weaponObj.transform.localPosition = Vector3.zero;
                weaponObj.transform.localRotation = Quaternion.identity;
                weaponObj.GetComponent<Collider>().enabled = false;

                equippedWeapon = weaponObj;
                AddWeapon(weaponObj);
                Debug.Log("æ­¦å™¨å–å¾—æˆåŠŸ: " + pickup.name);
                Debug.Log("æ‹¾ã£ãŸã‚ªãƒ–ã‚¸ã‚§ã‚¯ãƒˆã®ã‚·ãƒ¼ãƒ³çŠ¶æ…‹: " + weaponObj.scene.name);
            }
        }
        
    }

    void Crouch()
    {
        if (Input.GetKeyDown(KeyCode.LeftControl))
        {
            isCrouch = !isCrouch; // æŠ¼ã™ãŸã³ã«åˆ‡ã‚Šæ›¿ãˆ
            PlayerAnimator.SetBool("crouch", isCrouch);
        }
    }

    void GetWeapon()
    {
        // æ­¦å™¨å–å¾—
        if (Input.GetKeyDown(KeyCode.E) && !isTakingItem)
        {
            TryPickupWeapon();
            ishas_Weapon_pistol = true; // æ­¦å™¨æŒã¡çŠ¶æ…‹ã«ã™ã‚‹
            isAiming = false;         // æœ€åˆã¯æ§‹ãˆã¦ã„ãªã„
        }

    }

    void HandleAim()
    {
        isAiming = false;
        // æ­¦å™¨ã‚’æŒã£ã¦ã„ã¦ã€ã‹ã¤æ‹¾ã„ä¸­ã˜ã‚ƒãªã„ã¨ãã ã‘æ§‹ãˆã‚‰ã‚Œã‚‹
        if (ishas_Weapon_pistol && !isTakingItem && Input.GetMouseButton(1))
        {

            isAiming = true;
        }

        PlayerAnimator.SetBool("has_Weapon_pistol", isAiming);

    }

    void CrouchAim()
    {
        isPistol_crouch = false;
        //ãƒ”ã‚¹ãƒˆãƒ«ã‚’ã‚‚ã£ã¦ã„ã‚‹ã‹ã¤ãƒã‚¦ã‚¹ã®å³ã‚¯ãƒªãƒƒã‚¯ã‚’ãŠã—ã¦ã„ã‚‹é–“
        if (ishas_Weapon_pistol == true && Input.GetMouseButton(1))
        {
            isPistol_crouch = true;
        }

        PlayerAnimator.SetBool("pistol_crouch", isPistol_crouch);
    }

    void Pistol_crouch_Aiming()
    {
        isPistol_crouch_Aiming = false;

        if (ishas_Weapon_pistol == true && Input.GetMouseButton(1) && isRun == true)
        {
            isPistol_crouch_Aiming = true;
        }

        PlayerAnimator.SetBool("pistol_crouch_run", isPistol_crouch_Aiming);
    }

    void AddWeapon(GameObject weaponObj)
    {
        // ã™ã§ã«æŒã£ã¦ã„ã‚‹ãªã‚‰ç„¡è¦–
        if (weapons.Contains(weaponObj))
        {
            return;
        }

        // ä¸Šé™ã¯2å€‹ï¼ˆä¾‹ï¼‰
        if (weapons.Count >= 2)
        {
            GameObject removed = weapons[0];
            weapons.RemoveAt(0);
            Destroy(removed);
        }

        weapons.Add(weaponObj);
        // â† ã“ã“ã§ Gun.cs ã« Player1 ã‚’ã‚»ãƒƒãƒˆ
        Gun gunComp = weaponObj.GetComponent<Gun>();
        if (gunComp != null)
        {
            gunComp.player = this;
            Debug.Log("Gun ã« player ã‚’ã‚»ãƒƒãƒˆ: " + weaponObj.name);
        }

        currentWeaponIndex = weapons.Count - 1;
        EquipWeapon(currentWeaponIndex);

        Debug.Log("æ­¦å™¨è¿½åŠ : " + weaponObj.name);
    }

    void SwitchWeapon(int index)
    {
        if (index < 0 || index >= weapons.Count)
        {
            return;
        }

        currentWeaponIndex = index;
        EquipWeapon(currentWeaponIndex);
    }

    void EquipWeapon(int index)
    {
        Debug.Log("EquipWeaponå‘¼ã°ã‚ŒãŸ index=" + index + " weapons.Count=" + weapons.Count);
        for (int i = 0; i < weapons.Count; i++)
        {
            bool active = (i == index);
            weapons[i].SetActive(active);
            Debug.Log("EquipWeapon: " + weapons[i].name + " active=" + active);
        }
    }
}
